<resources>
    <string name="app_name">QuinielaAndroid</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_usermail">Correo Electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="btnLogin">Login</string>
    <string name="createAccount"><u>¿No tienes cuenta?, Crea una aquí</u></string>
    <string name="forgotPassword"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="btnRecoverLogin">Recuperar contraseña</string>
    <string name="barTittle">Título</string>
    <string name="btnJoin">Únuete</string>
    <string name="hint_confirm_password">Confirmar contraseña</string>
    <string name="create_account">Crear cuenta</string>
    <string name="menu_about">Acerca de</string>
    <string name="menu_signout">Cerrar sesión</string>

    <!-- Tabs !-->
    <string name="tab_marcadores">Marcadores</string>
    <string name="tab_quiniela">Mi quiniela</string>
    <string name="tab_resultado">Resultados</string>

    <!-- Team´s Array !-->
    <string name="country_prompt">Elije tu equipo</string>

    <string-array name="team_array">
        <item>Alemania</item>
        <item>Argentina</item>
        <item>Arabía Saudí</item>
        <item>Australia</item>
        <item>Bélgica</item>
        <item>Brasil</item>
        <item>Colombia</item>
        <item>Corea del Sur</item>
        <item>Costa Rica</item>
        <item>Croacia</item>
        <item>Dinamarca</item>
        <item>Egipto</item>
        <item>España</item>
        <item>Francia</item>
        <item>Inglaterra</item>
        <item>Irán</item>
        <item>Islandia</item>
        <item>Japón</item>
        <item>Marruecos</item>
        <item>México</item>
        <item>Nigeria</item>
        <item>Panamá</item>
        <item>Perú</item>
        <item>Polonia</item>
        <item>Portugal</item>
        <item>Rusia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Suecia</item>
        <item>Suiza</item>
        <item>Túnez</item>
        <item>Uruguay</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userName">Usuario</string>
    <string name="team">Equipo</string>
    <string name="points">Puntos:</string>

</resources>
