<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.avrilhb.quinielaandroid.login.view.CreateAccountActivity"
    android:background="@color/white">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/login_padding">

        <EditText
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789ABCDEFGHIJKLMNÑOPQRSTUVWXYZabcdefghijklmnñopqrstuvwxyz"
            android:ems="10"
            android:fontFamily="@font/interstate_lightcondensed"
            android:hint="@string/hint_username"
            android:inputType="text|textCapSentences"
            android:padding="@dimen/login_padding"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/login_text_size" />

       <Spinner
           android:id="@+id/teamSpinner"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:prompt="@string/country_prompt" />

        <EditText
            android:id="@+id/edtUserMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/interstate_lightcondensed"
            android:hint="@string/hint_usermail"
            android:inputType="textEmailAddress"
            android:padding="@dimen/login_padding"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/login_text_size" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789ABCDEFGHIJKLMNÑOPQRSTUVWXYZabcdefghijklmnñopqrstuvwxyz"
            android:ems="10"
            android:fontFamily="@font/interstate_lightcondensed"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/login_padding"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/login_text_size" />

        <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789ABCDEFGHIJKLMNÑOPQRSTUVWXYZabcdefghijklmnñopqrstuvwxyz"
            android:ems="10"
            android:fontFamily="@font/interstate_lightcondensed"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/login_padding"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/login_text_size" />

        <Button
            android:id="@+id/btnJoin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_padding"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/interstate_lightcondensed"
            android:text="@string/btnJoin"
            android:textAllCaps="false"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/login_text_size" />

    </LinearLayout>

</LinearLayout>
