<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context="com.avrilhb.quinielaandroid.login.view.LoginActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <ImageView
            android:id="@+id/logo"
            android:layout_marginTop="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/world_cup" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/login_padding">

            <EditText
                android:id="@+id/txtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/interstate_lightcondensed"
                android:hint="@string/hint_usermail"
                android:inputType="textEmailAddress"
                android:padding="@dimen/login_padding"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/login_text_size" />

            <TextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/interstate_lightcondensed"
                android:gravity="end"
                android:text="@string/forgotPassword"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="@dimen/login_padding"
                android:onClick="recoverPassword"/>

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789ABCDEFGHIJKLMNÑOPQRSTUVWXYZabcdefghijklmnñopqrstuvwxyz"
                android:ems="10"
                android:fontFamily="@font/interstate_lightcondensed"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/login_padding"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/login_text_size" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_padding"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="@font/interstate_lightcondensed"
                android:text="@string/btnLogin"
                android:textAllCaps="false"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/login_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_padding"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtCreateAccount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/interstate_lightcondensed"
                    android:gravity="center"
                    android:text="@string/createAccount"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorAccent"
                    android:onClick="createAccount"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>

